// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | ProgressBar Custom Colors 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #00C8F5;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #00C8F5;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  padding-bottom: 0px;
}

.c4 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #FF2B83;
}

.c8 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #D2F500;
}

.c10 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #00F0E1;
}

.c7 {
  width: 100%;
  height: 2px;
  background: #FF2B83;
}

.c9 {
  width: 100%;
  height: 2px;
  background: #00F0E1;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    title="progress bar"
  >
    <div
      className="c3 c4"
      title="Done - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c7"
    />
    <div
      className="c3 c8"
      title="Active - active step"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        2
      </span>
    </div>
    <div
      className="c9"
    />
    <div
      className="c3 c10"
      title="Next - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | ProgressBar Default 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  padding-bottom: 0px;
}

.c4 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #00D200;
}

.c8 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #0046FF;
}

.c10 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #BCBCB6;
}

.c7 {
  width: 100%;
  height: 2px;
  background: #00D200;
}

.c9 {
  width: 100%;
  height: 2px;
  background: #BCBCB6;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    title="progress bar"
  >
    <div
      className="c3 c4"
      title="undefined - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c7"
    />
    <div
      className="c3 c8"
      title="undefined - active step"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        2
      </span>
    </div>
    <div
      className="c9"
    />
    <div
      className="c3 c10"
      title="undefined - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | ProgressBar Lots Of Steps 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  padding-bottom: 0px;
}

.c4 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #00D200;
}

.c8 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #0046FF;
}

.c10 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #BCBCB6;
}

.c7 {
  width: 100%;
  height: 2px;
  background: #00D200;
}

.c9 {
  width: 100%;
  height: 2px;
  background: #BCBCB6;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    title="progress bar"
  >
    <div
      className="c3 c4"
      title="Lorem - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c7"
    />
    <div
      className="c3 c4"
      title="Ipsum - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c7"
    />
    <div
      className="c3 c4"
      title="Dolor - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c7"
    />
    <div
      className="c3 c8"
      title="Sit - active step"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        4
      </span>
    </div>
    <div
      className="c9"
    />
    <div
      className="c3 c10"
      title="Amet - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        5
      </span>
    </div>
    <div
      className="c9"
    />
    <div
      className="c3 c10"
      title="Ego - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        6
      </span>
    </div>
    <div
      className="c9"
    />
    <div
      className="c3 c10"
      title="Sum - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        7
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | ProgressBar Step Progression 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:first-child) {
  padding-top: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 100%;
  padding-bottom: 0px;
}

.c5 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #0046FF;
}

.c8 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #BCBCB6;
}

.c9 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #00D200;
}

.c7 {
  width: 100%;
  height: 2px;
  background: #BCBCB6;
}

.c11 {
  width: 100%;
  height: 2px;
  background: #00D200;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      title="progress bar"
    >
      <div
        className="c4 c5"
        title="One - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          1
        </span>
      </div>
      <div
        className="c7"
      />
      <div
        className="c4 c8"
        title="Two - step not done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          2
        </span>
      </div>
      <div
        className="c7"
      />
      <div
        className="c4 c8"
        title="Three - step not done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="c2 c3"
      title="progress bar"
    >
      <div
        className="c4 c9"
        title="One - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c11"
      />
      <div
        className="c4 c5"
        title="Two - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          2
        </span>
      </div>
      <div
        className="c7"
      />
      <div
        className="c4 c8"
        title="Three - step not done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="c2 c3"
      title="progress bar"
    >
      <div
        className="c4 c9"
        title="One - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c11"
      />
      <div
        className="c4 c9"
        title="Two - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c11"
      />
      <div
        className="c4 c5"
        title="Three - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | ProgressBar With Labels 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  padding-bottom: 0px;
}

.c4 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #00D200;
}

.c8 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #0046FF;
}

.c10 {
  position: relative;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  color: #FFFFFF;
  background: #BCBCB6;
}

.c7 {
  width: 100%;
  height: 2px;
  background: #00D200;
}

.c9 {
  width: 100%;
  height: 2px;
  background: #BCBCB6;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    title="progress bar"
  >
    <div
      className="c3 c4"
      title="Lorem ipsum - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c7"
    />
    <div
      className="c3 c8"
      title="Dolor sit amet - active step"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        2
      </span>
    </div>
    <div
      className="c9"
    />
    <div
      className="c3 c10"
      title="Foo bar - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        3
      </span>
    </div>
  </div>
</div>
`;
